--- a/package.json
+++ b/package.json
@@ -9,37 +9,33 @@
     "antlr4ts": "antlr4ts -visitor src/Tyson/Tyson.g4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@monaco-editor/react": "^3.3.0",
     "antlr4": "^4.8.0",
     "antlr4ts": "^0.5.0-alpha.3",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "monaco-editor": "0.20.0",
+    "@monaco-editor/react": "^3.3.0",
+    "@material-ui/core": "^4.9.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0",
-    "typescript": "^3.9.3"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.1",
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.4",
+    "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+
+    "eslint-config-alloy": "^3.7.2",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "prop-types": "latest",
-    "react-is": "^16.13.1",
-    "stylis": "^4.0.0"
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "typescript": "^3.9.3"
   },
   "browserslist": {
     "production": [
