--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "antlr4ts": "antlr4ts -visitor src/Tyson/Tyson.g4"
+    "antlr4ts": "antlr4ts -visitor src/Tyson/TysonParser.g4 src/Tyson/TysonLexer.g4"
   },
   "dependencies": {
     "antlr4": "^4.8.0",
@@ -31,7 +31,6 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
-
     "eslint-config-alloy": "^3.7.2",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
