--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "antlr4ts": "antlr4ts -visitor src/Tyson/TysonParser.g4 src/Tyson/TysonLexer.g4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@monaco-editor/react": "^3.3.0",
     "antlr4": "^4.8.0",
     "antlr4ts": "^0.5.0-alpha.3",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "monaco-editor": "0.20.0",
-    "@monaco-editor/react": "^3.3.0",
-    "@material-ui/core": "^4.9.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "vis-react": "^0.5.1"
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.1",
@@ -32,8 +33,8 @@
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "eslint-config-alloy": "^3.7.2",
-    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
     "typescript": "^3.9.3"
   },
   "browserslist": {
