--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyson",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -15,13 +15,14 @@
     "antlr4": "^4.8.0",
     "antlr4ts": "^0.5.0-alpha.3",
     "antlr4ts-cli": "^0.5.0-alpha.3",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "monaco-editor": "0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
-    "use-local-storage-state": "^3.0.1",
     "vis-react": "^0.5.1"
   },
   "devDependencies": {
