--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "typeRoots": ["./node_modules/@types"]
+    "jsx": "react-jsx",
+    "typeRoots": ["./node_modules/@types"],
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
